# netor_backend

./: .gitignore  pyproject.toml
api/: api_router.py
app/: main.py
app/core/: config.py
